<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.login.LoginScreen"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background"
    android:padding="20dp"
    android:paddingVertical="40dp"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_label"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="34dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_label"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:layout_marginBottom="5dp"
            />
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:textColorHint="@color/white_semi"
            android:textColor="@color/white_semi"
            android:padding="10dp"
            android:background="@drawable/custom_input"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_label"
            android:labelFor="@id/password"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:layout_marginBottom="5dp"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/password_hint"
            android:textAllCaps="false"
            android:textColorHint="@color/white_semi"
            android:textColor="@color/white_semi"
            android:background="@drawable/custom_input"
            android:inputType="textPassword"
            />

        <TextView
            android:id="@+id/forgot_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:text="@string/forgot_password_label"
            android:textColor="@color/white_semi"
            android:layout_marginTop="5dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button_label"
            android:textColor="@color/background"
            android:background="@drawable/custom_button"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/white_semi"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_label"
                android:textSize="20dp"
                android:textColor="@color/white_semi"
                android:paddingHorizontal="5dp"
                />
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/white_semi"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/guest_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anonymous_user"
            android:textColor="@color/white"
            android:background="@drawable/transparent_button"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="5dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_label"
            android:textColor="@color/white_semi"
            />
        <View
            android:layout_width="5dp"
            android:layout_height="0dp"/>
        <TextView
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button_label"
            android:textColor="@color/white"
            />
    </LinearLayout>

</LinearLayout>