<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.register.OtpScreen"
    android:gravity="center"
    android:background="@color/background"
    android:orientation="vertical"
    >
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/skip_button"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/transparent_button"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="Skip"
        android:textColor="@color/white"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otp_label"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="34dp"
            android:paddingLeft="30dp"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="50dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_fill_message"
            android:textColor="@color/white_semi"
            />
        <com.example.mynote.components.OtpEditText
            android:id="@+id/et_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="50dp"
            android:cursorVisible="false"
            android:digits="1234567890"
            android:inputType="number"
            android:maxLength="6"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp_will_expire_message"
                android:textColor="@color/white_semi"
                />
            <View
                android:layout_width="5dp"
                android:layout_height="0dp"/>

            <TextView
                android:id="@+id/expire_time_minute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/white"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" : "
                android:textColor="@color/white"
                />
            <TextView
                android:id="@+id/expire_time_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_do_not_have_message"
            android:textColor="@color/white_semi"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="10dp"/>
        <TextView
            android:id="@+id/resend_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_otp_label"
            android:textColor="@color/white"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="50dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/verify_otp_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_label"
            android:layout_marginHorizontal="30dp"
            android:textColor="@color/white"
            android:background="@drawable/transparent_button"
            android:textAllCaps="false"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>