<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.home.HomeFragment"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/search_bar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/custom_input"
            android:gravity="center"
            android:padding="2dp"
            >
            <EditText
                android:id="@+id/search_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_hint"
                android:textColor="@color/white_semi"
                android:textColorHint="@color/white_semi"
                android:padding="10dp"
                android:layout_weight="1"
                android:background="@drawable/search_input"
                android:maxLines="1"
                />
            <LinearLayout
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/transparent"
                >
                <ImageButton
                    android:id="@+id/search_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_search"
                    android:background="@color/transparent"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/list_item_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/background"
            android:gravity="center"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="-200dp"
                >
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/empty_list"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty_label"
                android:textColor="@color/white_semi"
                android:textAlignment="center"
                android:textSize="25dp"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty_sub_label"
                android:textColor="@color/white_semi"
                android:textAlignment="center"
                android:textSize="16dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/list_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/background"
            android:gravity="center"
            android:visibility="gone"
            >
            <ListView
                android:id="@+id/listView"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/new_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:borderWidth="0dp"
        app:backgroundTint="@color/transparent"
        android:backgroundTint="@color/transparent"
        app:maxImageSize="46dp"
        android:src="@drawable/ic_add"
        app:tint="@color/white"
        />

</FrameLayout>